force-app/main/default/objects/ClausesOpportunity__c/ClausesOpportunity__c.object-meta.xml
<CustomObject>
    <label>Clauses Opportunity</label>
    <nameField>
        <displayFormat>CON-{000000000}</displayFormat>
        <label>Clauses Opportunity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clauses Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>