force-app/main/default/objects/ClausesOpportunity__c/fields/ClauseName__c.field-meta.xml
<CustomField>
    <fullName>ClauseName__c</fullName>
    <label>Clause Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>