force-app/main/default/objects/ClausesOpportunity__c/fields/ClauseText__c.field-meta.xml
<CustomField>
    <fullName>ClauseText__c</fullName>
    <label>Clause Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>