force-app/main/default/objects/ClausesOpportunity__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Clauses Opportunities</relationshipLabel>
    <relationshipName>Clauses_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>