force-app/main/default/objects/ClausesOpportunity__c/listViews/CEO_ClausesOpportunity.listView-meta.xml
<ListView>
    <fullName>CEO_ClausesOpportunity</fullName>
    <filterScope>Queue</filterScope>
    <label>CEO</label>
    <queue>CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>