force-app/main/default/objects/ClausesOpportunity__c/listViews/Director_ClausesOpportunity.listView-meta.xml
<ListView>
    <fullName>Director_ClausesOpportunity</fullName>
    <filterScope>Queue</filterScope>
    <label>Director</label>
    <queue>Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>